--- a/historia.html
+++ b/historia.html
@@ -43,7 +43,7 @@
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="deportes.html">Deportes</a>                    
+                  <a class="nav-link" aria-current="page" href="deportes.html">Jugadores</a>                    
                 </li>
 
                 <li class="nav-item">
