--- a/contacto.html
+++ b/contacto.html
@@ -27,7 +27,10 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Colo-Colo</a>
+      <a class="navbar-brand"  href="index.html">
+        <img src="img/colo-colo-32.png" alt="Colo-Colo">
+
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -35,7 +38,8 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>                    
+            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                               
           </li>
 
           <li class="nav-item">
@@ -43,7 +47,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="deportes.html">Deportes</a>                    
+            <a class="nav-link" aria-current="page" href="deportes.html">Titulares</a>                    
           </li>
 
           <li class="nav-item">
@@ -61,6 +65,7 @@
       </div>
     </div>
   </nav>
+
 
 </header>
 
