--- a/contacto.html
+++ b/contacto.html
@@ -47,6 +47,8 @@
           </li>
 
           <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="deportes.html">Jugadores</a>                    
+
                     
           </li>
 
