--- a/deportes.html
+++ b/deportes.html
@@ -89,13 +89,14 @@
           <div class="col-md-4">
             <img src="img/ICON/1 CORTES FRENTE-2021-04-01 (1).png" class="img-fluid">
             <h4 class="text-center text-white">JugadorServicio 1</h4>
-            <p class="text-white">Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc rhoncus blandit aliquet. Mauris pellentesque lacus at orci maximus posuere. Etiam non sem massa. Donec vel nisi sit amet metus porttitor gravida. Cras varius sodales purus, sit amet mattis metus.
+            <p class="text-white">Brayan Josué Cortés Fernández es un futbolista chileno que se desempeña como guardameta y actualmente milita en C. S. D. Colo-Colo de la Primera División de Chile. Además, es internacional absoluto con la Selección de fútbol de Chile desde 2018
             </p>
           </div>          
           <div class="col-md-4">
             <img src="img/ICON/15 AMOR FRENTE-2021-05-05.png" class="img-fluid">
             <h4 class="text-center text-white">Jugador</h4>
-            <p class="text-white">Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc rhoncus blandit aliquet. Mauris pellentesque lacus at orci maximus posuere. Etiam non sem massa. Donec vel nisi sit amet metus porttitor gravida. Cras varius sodales purus, sit amet mattis metus.
+            <p class="text-white">Emiliano Javier Amor es un futbolista profesional argentino. Se desempeña como defensor central y su equipo actual es Colo-Colo de la Primera División de Chile.
+              
             </p>
           </div>          
           <div class="col-md-4">
