--- a/deportes.html
+++ b/deportes.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <title>Titulares | Mi Proyecto</title>    
+    <title>Jugadores | Mi Proyecto</title>    
 
     <!-- Archivo CSS Bootstrap 5 -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -84,11 +84,11 @@
           </div>
         </div>      
         
-        <!-- Todos los Servicios --> 
+        <!-- Jugadores --> 
         <div class="row">
           <div class="col-md-4">
             <img src="img/ICON/1 CORTES FRENTE-2021-04-01 (1).png" class="img-fluid">
-            <h4 class="text-center text-white">JugadorServicio 1</h4>
+            <h4 class="text-center text-white">Jugador</h4>
             <p class="text-white">Brayan Josué Cortés Fernández es un futbolista chileno que se desempeña como guardameta y actualmente milita en C. S. D. Colo-Colo de la Primera División de Chile. Además, es internacional absoluto con la Selección de fútbol de Chile desde 2018
             </p>
           </div>          
@@ -96,13 +96,13 @@
             <img src="img/ICON/15 AMOR FRENTE-2021-05-05.png" class="img-fluid">
             <h4 class="text-center text-white">Jugador</h4>
             <p class="text-white">Emiliano Javier Amor es un futbolista profesional argentino. Se desempeña como defensor central y su equipo actual es Colo-Colo de la Primera División de Chile.
-              
+
             </p>
           </div>          
           <div class="col-md-4">
             <img src="img/ICON/16 OPAZO FRENTE-2021-04-01.png" class="img-fluid">
             <h4 class="text-center text-white">Jugador</h4>
-            <p class="text-white">Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc rhoncus blandit aliquet. Mauris pellentesque lacus at orci maximus posuere. Etiam non sem massa. Donec vel nisi sit amet metus porttitor gravida. Cras varius sodales purus, sit amet mattis metus.
+            <p class="text-white">Óscar Mauricio Opazo Lara es un futbolista profesional chileno que juega como Lateral derecho en Colo-Colo de la Primera División de Chile. Además, fue internacional absoluto con la Selección de fútbol de Chile
             </p>
           </div>          
         </div> 
@@ -111,19 +111,20 @@
           <div class="col-md-4">
             <img src="img/ICON/17 SUAZO FRENTE-2021-04-01.png" class="img-fluid">
             <h4 class="text-center text-white">Jugador</h4>
-            <p class="text-white">Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc rhoncus blandit aliquet. Mauris pellentesque lacus at orci maximus posuere. Etiam non sem massa. Donec vel nisi sit amet metus porttitor gravida. Cras varius sodales purus, sit amet mattis metus.
+            <p class="text-white">Gabriel Alonso Suazo Urbina es un futbolista profesional chileno que se desempeña como carrilero izquierdo​ o volante mixto. Actualmente juega en el Club Social y Deportivo Colo-Colo de la Primera División de Chile, club en donde ejerce de capitán.​
             </p>
           </div>          
           <div class="col-md-4">
             <img src="img/ICON/26 C VILLANUEVA FRENTE-2021-04-01.png" class="img-fluid">
             <h4 class="text-center text-white">Jugador</h4>
-            <p class="text-white">Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc rhoncus blandit aliquet. Mauris pellentesque lacus at orci maximus posuere. Etiam non sem massa. Donec vel nisi sit amet metus porttitor gravida. Cras varius sodales purus, sit amet mattis metus.
+            <p class="text-white">Carlo Alberto Villanueva Fuentes es un futbolista profesional chileno que se desempeña como volante ofensivo y actualmente milita en Colo-Colo de la Primera División de Chile
+
             </p>
           </div>          
           <div class="col-md-4">
-            <img src="img/ICON/26 C VILLANUEVA FRENTE-2021-04-01.png" class="img-fluid">
+            <img src="img/ICON/12 CARABALI FRENTE-2021-04-01 (1).png" class="img-fluid">
             <h4 class="text-center text-white">Jugador</h4>
-            <p class="text-white">Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc rhoncus blandit aliquet. Mauris pellentesque lacus at orci maximus posuere. Etiam non sem massa. Donec vel nisi sit amet metus porttitor gravida. Cras varius sodales purus, sit amet mattis metus.
+            <p class="text-white">Gabriel Omar Carabalí Quiñonez es un futbolista profesional ecuatoriano​ nacionalizado chileno que se desempeña como guardameta en Colo-Colo de la Primera División de Chile. Además, es internacional absoluto con la selección de fútbol de Chile desde 2020
             </p>
           </div>          
         </div>
@@ -132,37 +133,37 @@
           <div class="col-md-4">
             <img src="img/ICON/34 PIZARRO FRENTE-2021-04-01.png" class="img-fluid">
             <h4 class="text-center text-white">Jugador</h4>
-            <p class="text-white">Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc rhoncus blandit aliquet. Mauris pellentesque lacus at orci maximus posuere. Etiam non sem massa. Donec vel nisi sit amet metus porttitor gravida. Cras varius sodales purus, sit amet mattis metus.
+            <p class="text-white">Vicente Tomás Pizarro Durcudoy es un futbolista profesional chileno. Juega de mediocampista defensivo en Colo-Colo de la Primera División Chilena. Es hijo de Jaime Pizarro, quien también jugó de mediocampista y fue director técnico en Colo-Colo.
             </p>
           </div>          
           <div class="col-md-4">
             <img src="img/ICON/35 CRUZ FRENTE-2021-04-01.png" class="img-fluid">
             <h4 class="text-center text-white">Jugador</h4>
-            <p class="text-white">Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc rhoncus blandit aliquet. Mauris pellentesque lacus at orci maximus posuere. Etiam non sem massa. Donec vel nisi sit amet metus porttitor gravida. Cras varius sodales purus, sit amet mattis metus.
+            <p class="text-white">Joan Manuel Cruz Castro es un futbolista profesional chileno que actualmente milita como mediocampista en Colo-Colo de la Primera División de Chile.
             </p>
           </div>          
           <div class="col-md-4">
             <img src="img/ICON/37 FALCON FRENTE-2021-04-01.png" class="img-fluid">
             <h4 class="text-center text-white">Jugador</h4>
-            <p class="text-white">Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc rhoncus blandit aliquet. Mauris pellentesque lacus at orci maximus posuere. Etiam non sem massa. Donec vel nisi sit amet metus porttitor gravida. Cras varius sodales purus, sit amet mattis metus.
+            <p class="text-white">Maximiliano Joel Falcón Picart es un futbolista profesional uruguayo. Actualmente juega como defensa central en Club Social y Deportivo Colo-Colo perteneciente a la Primera División de Chile.
             </p>
           </div> 
           <div class="col-md-4">
             <img src="img/ICON/5 GIL FRENTE-2021-04-01.png" class="img-fluid">
             <h4 class="text-center text-white">Jugador</h4>
-            <p class="text-white">Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc rhoncus blandit aliquet. Mauris pellentesque lacus at orci maximus posuere. Etiam non sem massa. Donec vel nisi sit amet metus porttitor gravida. Cras varius sodales purus, sit amet mattis metus.
+            <p class="text-white">Leonardo Roque Albano Gil es un futbolista profesional argentino nacionalizado chileno que se desempeña como mediocampista en el club Colo-Colo de la Primera División de Chile.
             </p>
           </div>          
           <div class="col-md-4">
             <img src="img/ICON/6 FUENTES FRENTE-2021-04-01.png" class="img-fluid">
             <h4 class="text-center text-white">Jugador</h4>
-            <p class="text-white">Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc rhoncus blandit aliquet. Mauris pellentesque lacus at orci maximus posuere. Etiam non sem massa. Donec vel nisi sit amet metus porttitor gravida. Cras varius sodales purus, sit amet mattis metus.
+            <p class="text-white">César Nicolás Fuentes González es un futbolista profesional chileno que se desempeña como volante de contención y actualmente milita en Colo-Colo de la Primera División de Chile.
             </p>
           </div> 
           <div class="col-md-4">
             <img src="img/ICON/8 COSTA FRENTE-2021-04-01.png" class="img-fluid">
             <h4 class="text-center text-white">Jugador</h4>
-            <p class="text-white">Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc rhoncus blandit aliquet. Mauris pellentesque lacus at orci maximus posuere. Etiam non sem massa. Donec vel nisi sit amet metus porttitor gravida. Cras varius sodales purus, sit amet mattis metus.
+            <p class="text-white">Basilio Gabriel Costa Heredia es un futbolista profesional uruguayo naturalizado peruano. Juega como interior derecho y su equipo actual es Colo-Colo de la primera división de Chile. Es internacional con la selección peruana de fútbol desde 2019.
             </p>
           </div>            
         </div>
