--- a/deportes.html
+++ b/deportes.html
@@ -162,8 +162,8 @@
           </div> 
           <div class="col-md-4">
             <img src="img/ICON/8 COSTA FRENTE-2021-04-01.png" class="img-fluid">
-            <h4 class="text-center text-white">Jugador</h4>
-            <p class="text-white">Basilio Gabriel Costa Heredia es un futbolista profesional uruguayo naturalizado peruano. Juega como interior derecho y su equipo actual es Colo-Colo de la primera división de Chile. Es internacional con la selección peruana de fútbol desde 2019.
+            <h4 class="text-center text-white border-dark">Jugador</h4>
+            <p class="text-white border-dark">Basilio Gabriel Costa Heredia es un futbolista profesional uruguayo naturalizado peruano. Juega como interior derecho y su equipo actual es Colo-Colo de la primera división de Chile. Es internacional con la selección peruana de fútbol desde 2019.
             </p>
           </div>            
         </div>
