--- a/deportes.html
+++ b/deportes.html
@@ -148,19 +148,19 @@
             <p class="text-white">Maximiliano Joel Falcón Picart es un futbolista profesional uruguayo. Actualmente juega como defensa central en Club Social y Deportivo Colo-Colo perteneciente a la Primera División de Chile.
             </p>
           </div> 
-          <div class="col-md-4 bg-dark">
+          <div class="col-md-4 border-white">
             <img src="img/ICON/5 GIL FRENTE-2021-04-01.png" class="img-fluid">
             <h4 class="text-center text-white">Jugador</h4>
             <p class="text-white">Leonardo Roque Albano Gil es un futbolista profesional argentino nacionalizado chileno que se desempeña como mediocampista en el club Colo-Colo de la Primera División de Chile.
             </p>
           </div>          
-          <div class="col-md-4 bg-dark">
+          <div class="col-md-4 border-white">
             <img src="img/ICON/6 FUENTES FRENTE-2021-04-01.png" class="img-fluid">
             <h4 class="text-center text-white">Jugador</h4>
             <p class="text-white">César Nicolás Fuentes González es un futbolista profesional chileno que se desempeña como volante de contención y actualmente milita en Colo-Colo de la Primera División de Chile.
             </p>
           </div> 
-          <div class="col-md-4 bg-dark">
+          <div class="col-md-4 border-white">
             <img src="img/ICON/8 COSTA FRENTE-2021-04-01.png" class="img-fluid">
             <h4 class="text-center text-white ">Jugador</h4>
             <p class="text-white ">Basilio Gabriel Costa Heredia es un futbolista profesional uruguayo naturalizado peruano. Juega como interior derecho y su equipo actual es Colo-Colo de la primera división de Chile. Es internacional con la selección peruana de fútbol desde 2019.
