--- a/deportes.html
+++ b/deportes.html
@@ -151,19 +151,19 @@
           <div class="col-md-4 border-white">
             <img src="img/ICON/5 GIL FRENTE-2021-04-01.png" class="img-fluid">
             <h4 class="text-center text-white">Jugador</h4>
-            <p class="text-white">Leonardo Roque Albano Gil es un futbolista profesional argentino nacionalizado chileno que se desempeña como mediocampista en el club Colo-Colo de la Primera División de Chile.
+            <p class="text-white border-danger">Leonardo Roque Albano Gil es un futbolista profesional argentino nacionalizado chileno que se desempeña como mediocampista en el club Colo-Colo de la Primera División de Chile.
             </p>
           </div>          
           <div class="col-md-4 border-white">
             <img src="img/ICON/6 FUENTES FRENTE-2021-04-01.png" class="img-fluid">
             <h4 class="text-center text-white">Jugador</h4>
-            <p class="text-white">César Nicolás Fuentes González es un futbolista profesional chileno que se desempeña como volante de contención y actualmente milita en Colo-Colo de la Primera División de Chile.
+            <p class="text-white border-danger">César Nicolás Fuentes González es un futbolista profesional chileno que se desempeña como volante de contención y actualmente milita en Colo-Colo de la Primera División de Chile.
             </p>
           </div> 
-          <div class="col-md-4 border-white">
+          <div class="col-md-4">
             <img src="img/ICON/8 COSTA FRENTE-2021-04-01.png" class="img-fluid">
             <h4 class="text-center text-white ">Jugador</h4>
-            <p class="text-white ">Basilio Gabriel Costa Heredia es un futbolista profesional uruguayo naturalizado peruano. Juega como interior derecho y su equipo actual es Colo-Colo de la primera división de Chile. Es internacional con la selección peruana de fútbol desde 2019.
+            <p class="text-white border-danger">Basilio Gabriel Costa Heredia es un futbolista profesional uruguayo naturalizado peruano. Juega como interior derecho y su equipo actual es Colo-Colo de la primera división de Chile. Es internacional con la selección peruana de fútbol desde 2019.
             </p>
           </div>            
         </div>
