--- a/deportes.html
+++ b/deportes.html
@@ -79,8 +79,10 @@
         <div class="row">
           <div class="col-md-12">
             <p class="mt-3 text-white">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ultricies libero justo, vel porta nunc semper at. Fusce tristique rhoncus bibendum. Ut molestie lectus quis accumsan convallis. Nam non lorem semper, congue velit nec, consectetur metus. Phasellus fringilla pretium sagittis. Proin elit justo, fermentum vitae purus vel, luctus condimentum quam. Cras laoreet sem ac mi varius maximus. Morbi augue ex, vehicula eu venenatis a, cursus sit amet urna. Mauris felis urna, feugiat in egestas porta, sodales quis nulla. Vestibulum lacinia accumsan turpis, at commodo enim luctus sit amet. Pellentesque eget vestibulum augue, ut venenatis magna. Nunc consectetur condimentum pellentesque. Etiam malesuada, purus et bibendum iaculis, ante arcu condimentum mauris, et porta felis lacus in nisi. Vivamus mi urna, varius eu ultrices et, sollicitudin non ipsum.
-            </p>
+              15 jugadores Sub 21 son los que ha integrado el cuerpo técnico del Cacique en lo que va del Campeonato Nacional 2022: Alexander Oroz, Bruno Gutiérrez, Damián Pizarro, Daniel Gutiérrez, Dylan Portilla, Eduardo Villanueva, Jeyson Rojas, Jordhy Thompson, Joan Cruz, Julio Fierro, Lucas Soto, Luciano Arriagada, Pedro Navarro, Santiago Bravo y Vicente Pizarro.
+              <br>
+              Colo Colo supera a Universidad de Chile por un jugador y es el equipo con más jugadores Sub 21 integrados. Eso sí, hay una gran diferencia, en el Cacique no existe una necesidad. ¡Arriba el Semillero Albo!
+             </p>
           </div>
         </div>      
         
