--- a/deportes.html
+++ b/deportes.html
@@ -75,13 +75,23 @@
             <h1>Jugadores</h1>
           </div>
         </div> 
-
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+          <strong>Colo Colo supera a Universidad de Chile por un jugador y es el equipo con más jugadores Sub 21 integrados. Eso sí, hay una gran diferencia, en el Cacique no existe una necesidad. ¡Arriba el Semillero Albo!.</strong>
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+        <br>
         <div class="row">
           <div class="col-md-12">
             <p class="mt-3 text-white">
-              15 jugadores Sub 21 son los que ha integrado el cuerpo técnico del Cacique en lo que va del Campeonato Nacional 2022: Alexander Oroz, Bruno Gutiérrez, Damián Pizarro, Daniel Gutiérrez, Dylan Portilla, Eduardo Villanueva, Jeyson Rojas, Jordhy Thompson, Joan Cruz, Julio Fierro, Lucas Soto, Luciano Arriagada, Pedro Navarro, Santiago Bravo y Vicente Pizarro.
+              Un equipo que viene pasando por un buen momento es Colo Colo, que viene de vencer por 4 a 0 de forma contundente a Unión Española y que cada vez se acerca más a su objetivo de bajar la estrella N°33 en este campeonato nacional.
               <br>
-              Colo Colo supera a Universidad de Chile por un jugador y es el equipo con más jugadores Sub 21 integrados. Eso sí, hay una gran diferencia, en el Cacique no existe una necesidad. ¡Arriba el Semillero Albo!
+              <br>
+              Son los únicos líder del torneo con 51 puntos y su máximo perseguidor, Curicó Unido, se distancia a 12 unidades, dejándolos en la segunda posición con 40.
+              <br>
+              <br>
+              En rendimiento del equipo, es parte del buen trabajo de Gustavo Quinteros, que desde que llegó, acomodó las piezas para que el andamiaje del ‘Cacique’ rindiera frutos. Sin embargo, también se debe al gran presente de una de sus figuras, Juan Martín Lucero.
+<br>
+              
              </p>
           </div>
         </div>      
