--- a/historia.html
+++ b/historia.html
@@ -80,7 +80,7 @@
           <div class="col-md-12">
             <img src="img/img-sup-galerias.png" class="img-fluid">
             <p class="mt-3 text-white">
-              Ut leo arcu, mattis id mollis id, pellentesque mollis purus. Morbi vitae odio erat. Maecenas tincidunt eu lacus et rhoncus. Morbi iaculis faucibus eros in suscipit. Suspendisse id purus sed lorem tristique pharetra ut sed tortor. Donec hendrerit quis libero congue dictum. Praesent vel justo mollis, egestas dui et, vehicula elit. Aliquam pharetra, augue non dignissim accumsan, orci orci tristique enim, et lobortis nulla erat at nulla. Phasellus id ante a eros tincidunt fringilla. In rutrum ipsum a sapien lobortis, nec luctus erat aliquam. In vulputate metus at tempus vulputate. Ut vitae consectetur sapien, vel auctor lectus. Praesent consequat viverra justo, et varius felis posuere et. Ut tristique luctus feugiat. Donec dictum dignissim justo, dictum vehicula leo porttitor iaculis. Nulla ullamcorper at lorem eget suscipit.
+              Colo-Colo, club de fútbol formado por los hermanos Arellano en 1925, estuvo entre los fundadores de la Liga Profesional en 1933. En los primeros años del profesionalismo el club no tuvo buenos campeonatos, sin embargo, tras obtener su primer título en 1937 en forma invicta, comenzó una racha que lo llevaría a convertirse en el club más popular y ganador de títulos, al obtener los campeonatos de 1939, 1941, 1944, 1947, 1953, 1956 y 1960.
             </p>
           </div>
         </div>      
@@ -89,23 +89,23 @@
         <div class="row">
           <div class="col-md-4">
             <img src="img/15 AMOR FRENTE-2021-05-05.png" class="img-fluid">
-            <h4 class="text-center text-white">Objetivo</h4>
+            <h4 class="text-center text-white">Luto eterno</h4>
             <p class="text-white">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lorem quam, molestie non pellentesque ut, eleifend ut felis. Ut ultricies a nunc et aliquam. Nulla consectetur eros lectus, fermentum fermentum purus molestie non. Duis vestibulum, est vel mattis lobortis, diam massa sollicitudin sapien, non faucibus ligula purus id purus. Donec ac erat felis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc rhoncus blandit aliquet. Mauris pellentesque lacus at orci maximus posuere. Etiam non sem massa. Donec vel nisi sit amet metus porttitor gravida. Cras varius sodales purus, sit amet mattis metus.
+              Desde la trágica muerte de Arellano en Valladolid, durante la gira internacional de 1927, la camiseta de Colo-Colo lleva un crespón, cinta horizontal de color negro, que representa el luto eterno de la institución a la partida de su fundador.
             </p>
           </div>          
           <div class="col-md-4">
             <img src="img/17 SUAZO FRENTE-2021-04-01.png" class="img-fluid">
-            <h4 class="text-center text-white">Misión</h4>
+            <h4 class="text-center text-white">Estadio propio</h4>
             <p class="text-white">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lorem quam, molestie non pellentesque ut, eleifend ut felis. Ut ultricies a nunc et aliquam. Nulla consectetur eros lectus, fermentum fermentum purus molestie non. Duis vestibulum, est vel mattis lobortis, diam massa sollicitudin sapien, non faucibus ligula purus id purus. Donec ac erat felis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc rhoncus blandit aliquet. Mauris pellentesque lacus at orci maximus posuere. Etiam non sem massa. Donec vel nisi sit amet metus porttitor gravida. Cras varius sodales purus, sit amet mattis metus.
+              El Estadio Monumental está ubicado en la comuna de Macul en la ciudad de Santiago, Chile. Es propiedad de Colo-Colo equipo de la Primera División. Está emplazado en el sector suroriente de Santiago, en el límite de San Joaquín y La Florida, cercano a la intersección de las avenidas Vicuña Mackenna y Departamental.
             </p>
           </div>          
           <div class="col-md-4">
             <img src="img/37 FALCON FRENTE-2021-04-01.png" class="img-fluid">
-            <h4 class="text-center text-white">Visión</h4>
+            <h4 class="text-center text-white">La copa del 91</h4>
             <p class="text-white">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lorem quam, molestie non pellentesque ut, eleifend ut felis. Ut ultricies a nunc et aliquam. Nulla consectetur eros lectus, fermentum fermentum purus molestie non. Duis vestibulum, est vel mattis lobortis, diam massa sollicitudin sapien, non faucibus ligula purus id purus. Donec ac erat felis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc rhoncus blandit aliquet. Mauris pellentesque lacus at orci maximus posuere. Etiam non sem massa. Donec vel nisi sit amet metus porttitor gravida. Cras varius sodales purus, sit amet mattis metus.
+              El nuevo equipo que se había formado pasó a ser dirigido por el croata Mirko Jozic, bajo cuya dirección obtuvo los títulos de 1990 y 1991, y el triunfo en la Copa Libertadores de América en 1991. Comenzó para el club una de las épocas más exitosas con la obtención de la Recopa Sudamericana y la Interamericana en 1992, además de los títulos de 1996, 1997 y 1998.
             </p>
           </div>          
         </div>
