--- a/contacto.html
+++ b/contacto.html
@@ -166,39 +166,38 @@
       </div>
 
 
-    </main>
-    <div class="row mb-5">
+    </main>ç
+    <div class="row mt-4">
       <div class="col-md-12 text-center text-white">
         <h1>Preguntas frecuentes</h1>
         <div class="accordion accordion-flush" id="accordionFlushExample">
           <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingOne">
               <button class="accordion-button collapsed bg-dark text-white" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                Accordion Item #1
-              </button>
+                ¿Cuantos socios tiene Colo-Colo?              </button>
             </h2>
             <div id="flush-collapseOne" class="accordion-collapse collapse bg-dark text-white" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-              <div class="accordion-body bg-white text-dark">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+              <div class="accordion-body bg-white  text-dark">58.500 (Dato: 05/01/2022) </div>
             </div>
           </div>
           <div class="accordion-item bg-dark">
             <h2 class="accordion-header bg-dark" id="flush-headingTwo">
               <button class="accordion-button collapsed bg-dark text-white" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                Accordion Item #2
+                ¿Cuanta capacidad tiene el Estadio Monumental?
               </button>
             </h2>
             <div id="flush-collapseTwo" class="accordion-collapse collapse bg-white text-dark" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-              <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+              <div class="accordion-body">47.347 mil personas.</div>
             </div>
           </div>
           <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingThree">
               <button class="accordion-button collapsed bg-dark text-white" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                Accordion Item #3
+                ¿Quien es el maximo idolo de Colo-Colo?
               </button>
             </h2>
             <div id="flush-collapseThree" class="accordion-collapse collapse " aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-              <div class="accordion-body bg-white text-dark">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+              <div class="accordion-body bg-white text-dark">Se trata de Carlos Caszely, el máximo ídolo histórico de Colo Colo. El Rey del Metro Cuadrado no vacila en realizar un agudo diagnóstico.</div>
             </div>
           </div>
         </div>
